--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "jest": "24.9.0",
     "jest-date-mock": "1.0.7",
     "jest-junit": "10.0.0",
-    "jest-preset-angular": "8.0.0",
+    "jest-preset-angular": "^8.2.0",
     "jest-sonar-reporter": "2.0.0",
     "lint-staged": "8.2.1",
     "merge-jsons-webpack-plugin": "1.0.20",
@@ -101,7 +101,7 @@
     "webpack": "4.41.2",
     "webpack-bundle-analyzer": "3.6.0",
     "webpack-cli": "3.3.10",
-    "webpack-dev-server": "3.9.0",
+    "webpack-dev-server": "^3.11.0",
     "webpack-merge": "4.2.2",
     "webpack-notifier": "1.8.0",
     "workbox-webpack-plugin": "4.3.1",
