--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "node_modules"
   ],
   "dependencies": {
+    "@angular/animations": "^9.1.7",
     "@angular/common": "9.0.4",
     "@angular/compiler": "9.0.4",
     "@angular/core": "9.0.4",
@@ -22,6 +23,7 @@
     "@ng-bootstrap/ng-bootstrap": "6.0.0",
     "@ngx-translate/core": "11.0.1",
     "@ngx-translate/http-loader": "4.0.0",
+    "angular-animations": "0.0.10",
     "bootstrap": "4.4.1",
     "moment": "2.24.0",
     "ng-jhipster": "0.12.0",
@@ -29,10 +31,10 @@
     "ngx-infinite-scroll": "8.0.1",
     "ngx-webstorage": "5.0.0",
     "rxjs": "6.5.3",
-    "swagger-ui-dist": "3.24.3",
     "sockjs-client": "1.4.0",
-    "webstomp-client": "1.2.6",
+    "swagger-ui-dist": "3.24.3",
     "tslib": "1.10.0",
+    "webstomp-client": "1.2.6",
     "zone.js": "0.10.2"
   },
   "devDependencies": {
@@ -96,7 +98,7 @@
     "ts-loader": "6.2.1",
     "ts-node": "8.5.4",
     "tslint": "6.0.0",
-    "typescript": "3.7.5",
+    "typescript": "^3.6.4",
     "webdriver-manager": "12.1.7",
     "webpack": "4.41.2",
     "webpack-bundle-analyzer": "3.6.0",
