update bootstrap theme using bootswatch

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ngx-translate/http-loader": "4.0.0",
     "angular-animations": "0.0.10",
     "bootstrap": "4.4.1",
+    "bootswatch": "^4.5.0",
     "moment": "2.24.0",
     "ng-jhipster": "0.12.0",
     "ngx-cookie": "4.0.2",
@@ -98,7 +99,7 @@
     "ts-loader": "6.2.1",
     "ts-node": "8.5.4",
     "tslint": "6.0.0",
-    "typescript": "^3.6.4",
+    "typescript": "^3.7.5",
     "webdriver-manager": "12.1.7",
     "webpack": "4.41.2",
     "webpack-bundle-analyzer": "3.6.0",
