--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
     "node_modules"
   ],
   "dependencies": {
-    "@angular/animations": "^9.1.7",
     "@angular/common": "9.0.4",
     "@angular/compiler": "9.0.4",
-    "@angular/core": "9.0.4",
+    "@angular/core": "^9.1.7",
     "@angular/forms": "9.0.4",
     "@angular/localize": "9.0.4",
     "@angular/platform-browser": "9.0.4",
@@ -20,7 +19,7 @@
     "@fortawesome/angular-fontawesome": "0.6.0",
     "@fortawesome/fontawesome-svg-core": "1.2.26",
     "@fortawesome/free-solid-svg-icons": "5.12.0",
-    "@ng-bootstrap/ng-bootstrap": "6.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^5.3.1",
     "@ngx-translate/core": "11.0.1",
     "@ngx-translate/http-loader": "4.0.0",
     "angular-animations": "0.0.10",
@@ -36,7 +35,7 @@
     "swagger-ui-dist": "3.24.3",
     "tslib": "1.10.0",
     "webstomp-client": "1.2.6",
-    "zone.js": "0.10.2"
+    "zone.js": "^0.10.3"
   },
   "devDependencies": {
     "@angular/cli": "9.0.4",
@@ -69,11 +68,11 @@
     "eslint-loader": "3.0.3",
     "file-loader": "5.0.2",
     "friendly-errors-webpack-plugin": "1.7.0",
-    "generator-jhipster": "6.8.0",
+    "generator-jhipster": "^6.9.0",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
     "husky": "3.1.0",
-    "jest": "24.9.0",
+    "jest": "^25.5.4",
     "jest-date-mock": "1.0.7",
     "jest-junit": "10.0.0",
     "jest-preset-angular": "^8.2.0",
@@ -98,7 +97,7 @@
     "to-string-loader": "1.1.6",
     "ts-loader": "6.2.1",
     "ts-node": "8.5.4",
-    "tslint": "6.0.0",
+    "tslint": "^5.20.1",
     "typescript": "^3.7.5",
     "webdriver-manager": "12.1.7",
     "webpack": "4.41.2",
