--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "node_modules"
   ],
   "dependencies": {
-    "@angular/common": "9.0.4",
-    "@angular/compiler": "9.0.4",
-    "@angular/core": "^9.1.7",
-    "@angular/forms": "9.0.4",
-    "@angular/localize": "9.0.4",
-    "@angular/platform-browser": "9.0.4",
-    "@angular/platform-browser-dynamic": "9.0.4",
-    "@angular/router": "9.0.4",
+    "@angular/animations": "^9.1.9",
+    "@angular/common": "^9.1.9",
+    "@angular/compiler": "9.1.9",
+    "@angular/core": "^9.1.9",
+    "@angular/forms": "^9.1.9",
+    "@angular/localize": "9.1.9",
+    "@angular/platform-browser": "^9.1.9",
+    "@angular/platform-browser-dynamic": "9.1.9",
+    "@angular/router": "9.1.9",
     "@fortawesome/angular-fontawesome": "0.6.0",
     "@fortawesome/fontawesome-svg-core": "1.2.26",
     "@fortawesome/free-solid-svg-icons": "5.12.0",
@@ -30,16 +31,16 @@
     "ngx-cookie": "4.0.2",
     "ngx-infinite-scroll": "8.0.1",
     "ngx-webstorage": "5.0.0",
-    "rxjs": "6.5.3",
+    "rxjs": "^6.5.5",
     "sockjs-client": "1.4.0",
     "swagger-ui-dist": "3.24.3",
-    "tslib": "1.10.0",
+    "tslib": "^1.13.0",
     "webstomp-client": "1.2.6",
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular/cli": "9.0.4",
-    "@angular/compiler-cli": "9.0.4",
+    "@angular/cli": "9.1.7",
+    "@angular/compiler-cli": "9.1.9",
     "@ngtools/webpack": "9.0.4",
     "@openapitools/openapi-generator-cli": "1.0.10-4.2.3",
     "@types/chai": "4.2.7",
