--- a/package.json
+++ b/package.json
@@ -20,17 +20,19 @@
     "@fortawesome/angular-fontawesome": "0.6.0",
     "@fortawesome/fontawesome-svg-core": "1.2.26",
     "@fortawesome/free-solid-svg-icons": "5.12.0",
-    "@ng-bootstrap/ng-bootstrap": "^5.3.1",
+    "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "@ngx-translate/core": "11.0.1",
     "@ngx-translate/http-loader": "4.0.0",
     "angular-animations": "0.0.10",
     "bootstrap": "4.4.1",
     "bootswatch": "^4.5.0",
+    "jquery": "^1.9.1",
     "moment": "2.24.0",
-    "ng-jhipster": "0.12.0",
+    "ng-jhipster": "^0.13.0",
     "ngx-cookie": "4.0.2",
     "ngx-infinite-scroll": "8.0.1",
     "ngx-webstorage": "5.0.0",
+    "popper.js": "^1.16.1",
     "rxjs": "^6.5.5",
     "sockjs-client": "1.4.0",
     "swagger-ui-dist": "3.24.3",
