--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "node_modules"
   ],
   "dependencies": {
+    "@angular/animations": "^9.1.9",
     "@angular/common": "9.1.3",
     "@angular/compiler": "9.1.3",
     "@angular/core": "9.1.3",
@@ -32,12 +33,10 @@
     "ngx-infinite-scroll": "8.0.2",
     "ngx-webstorage": "5.0.0",
     "rxjs": "6.5.5",
-    "swagger-ui-dist": "3.25.1",
     "sockjs-client": "1.4.0",
     "swagger-ui-dist": "3.24.3",
-    "tslib": "^1.13.0",
-    "webstomp-client": "1.2.6",
     "tslib": "1.11.1",
+    "webstomp-client": "1.2.6",
     "zone.js": "0.10.3"
   },
   "devDependencies": {
